--- a/src/Acme/ContactsBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/ContactsBundle/Resources/views/Default/index.html.twig
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title></title>
-    </head>
-    <body>
-        <h1>Hello {{ name }}</h1>
-
+        <title>Contact manager</title>
         {% block javascripts %}
             <script src="{{ asset('bundles/acmecontacts/js/underscore-min.js') }}"></script>
             <script src="{{ asset('bundles/acmecontacts/js/jquery-1.8.3.min.js') }}"></script>
@@ -15,7 +11,32 @@
             <script src="{{ asset('bundles/acmecontacts/js/views.js') }}"></script>
             <script src="{{ asset('bundles/acmecontacts/js/router.js') }}"></script>
             <script src="{{ asset('bundles/acmecontacts/js/collections.js') }}"></script>
-        {% endblock %}
+        {% endblock %}        
+    </head>
+    <body>
+        <h1>Contact manager</h1>
+        
+        <form id="addContact">
+            <div>
+                <label for="first_name">Имя: </label>
+                <input type="text" id="first_name" name="first_name" required>
+            </div>
+            <div>
+                <label for="last_name">Фамилия: </label>
+                <input type="text" id="last_name" name="last_name" required>
+            </div>
+            <div>
+                <label for="email_address">Email: </label>
+                <input type="email" id="email_address" name="email_address" required>
+            </div>
+            <div>
+                <label for="description">Описание: </label>
+                <textarea id="description" name="description"></textarea>
+            </div>
+            <div>
+                <input type="submit" value="Добавить контакт">
+            </div>
+        </form>           
 
         <script>
             new App.Router();
