--- a/src/Acme/ContactsBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/ContactsBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>Contact manager</title>
+        
+        <style>
+            #allContacts { margin-top: 2em; }        
+        </style>
+        
         {% block javascripts %}
             <script src="{{ asset('bundles/acmecontacts/js/underscore-min.js') }}"></script>
             <script src="{{ asset('bundles/acmecontacts/js/jquery-1.8.3.min.js') }}"></script>
